# ot-wgan

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  presentation.ipynb  pyproject.toml
.github/workflows/: codecov.yml  main.yml
test/: premier_code.py  test_wgan.py
utils/: model.py  monte_carlo.py  sinkhorn.py
